--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -24,13 +24,22 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y wget unzip
         sudo apt-get install -y google-chrome-stable
+        
         # Get Chrome major version
         CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d'.' -f1)
         echo "Chrome Version: $CHROME_VERSION"
-        # Download matching Chromedriver
-        wget -q "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION" -O LATEST_RELEASE
-        CHROMEDRIVER_VERSION=$(cat LATEST_RELEASE)
-        echo "Chromedriver Version: $CHROMEDRIVER_VERSION"
+        
+        # Attempt to download the specific Chromedriver version
+        if wget -q --spider "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION"; then
+          wget -q "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION" -O LATEST_RELEASE
+          CHROMEDRIVER_VERSION=$(cat LATEST_RELEASE)
+        else
+          echo "Specific Chromedriver version for Chrome $CHROME_VERSION not found. Fetching the latest release."
+          wget -q "https://chromedriver.storage.googleapis.com/LATEST_RELEASE" -O LATEST_RELEASE
+          CHROMEDRIVER_VERSION=$(cat LATEST_RELEASE)
+        fi
+        
+        echo "Using Chromedriver Version: $CHROMEDRIVER_VERSION"
         wget "https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip"
         unzip chromedriver_linux64.zip
         sudo mv chromedriver /usr/local/bin/
