--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable
-        sudo apt-get install -y chromium-driver
+        sudo apt-get install -y chromedriver
 
     - name: Install dependencies
       run: |
@@ -50,4 +50,4 @@ jobs:
         DISPLAY: :99
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         CHROME_BIN: /usr/bin/google-chrome-stable
-        CHROMIUM_DRIVER: /usr/bin/chromium-driver
+        CHROMIUM_DRIVER: /usr/bin/chromedriver
