--- a/.github/workflows/main_test.yml
+++ b/.github/workflows/main_test.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable
-        sudo apt-get install -y chromedriver
+        sudo apt-get install -y chromium-driver
 
     - name: Install dependencies
       run: |
